# opengl_eaxmple1

./: .gitignore  CMakeLists.txt  Dependency.cmake  README.md  imgui.ini
imgui/: imgui.cpp
model/: M0609.3DS  output.mtl  ttt.3DS  vampire.mtl
shader/: grid.fs  grid.vs  lighting.fs  lighting.vs
src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  context_camera.cpp  context_grid.cpp  context_render.cpp  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  mesh_create.cpp  mesh_render.cpp  model.cpp  model.h  model_load.cpp  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_layout.cpp
